[package]
name = "str_metrics"
version = "0.1.0"
authors = ["Anirban Mukhopadhyay <anirban.mukhop@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
helix = "0.7.5"
unicode-segmentation = "1.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
