[package]
name = "str_metrics"
version = "0.1.0"
authors = ["Anirban Mukhopadhyay <anirban.mukhop@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
unicode-segmentation = "^1.6"
libc = "^0.2"
itertools = "^0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
